tester/testsuite/extensions/objects1/bad/bad002.jl
/* redefinition of method */

class Point {
	int x() {
		return 0;
	}

	int x() {
		return 1;
	}
}

int main() {
    return 1;
}
